compiler/tests/en/errors/void_return.salam
// EXPECT: E049
func f(): ret 5 end

func main: end
